<resources>
    <string name="app_name">Eat Or Throw</string>
    <string name="photo_image_text">Photo image</string>
    <string name="snap_expire_date_btn_text">Snap Expire date</string>
    <string name="edit_text_view_label">Expire date:</string>
    <string name="recognized_date_options_label">Recognized alternative dates:</string>
    <string name="snap_barcode_btn_text">Snap Barcode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="productexpirydate">productExpiryDate</string>
    <string name="productbarcode">productbarcode</string>
    <string name="click_to_scan_barcode">Click to navigate to barcode scan page</string>
    <string name="click_to_scan_expire_date">Click to navigate to expire date scan page</string>
    <string name="barcode_title">Title</string>
    <string name="barcode_url">URL</string>
    <string name="barcode_contact_info">Contact info</string>
    <string name="barcode_email">Email</string>
    <string name="edit_product_name_text_view_label">Product name *</string>
    <string name="save_btn">Save</string>
    <string name="enter_product_category_placeholder">Enter product category</string>
    <string name="enter_product_name_placeholder">Enter product name</string>
    <string name="enter_expire_date_or_snapshot_it_placeholder">Enter or snap expiry date \u0020</string>
    <string name="date_picker_btn_text">date_picker_btn_text</string>
    <string name="edit_product_category_text_view_label">Product category *</string>
    <string name="purchase_date_text_view_label">Purchase date *</string>
    <string name="expiry_date_text_view_label">Expiry date *</string>
    <string name="edit_product_note_text_view_label">Additional note</string>
    <string name="enter_product_note_placeholder">Enter additional note</string>
    <string name="cancel_btn">Cancel</string>
    <string name="snap_product_btn_text">Snap product</string>
    <string name="select_product_category">Select product category *</string>
    <string name="home_btn">Home</string>
    <string name="enter_purchase_date_or_snapshot_it_placeholder">Enter purchase date</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save product</string>
    <string name="product_name_text_label">Product name : </string>
    <string name="product_category_text_label">Product category : </string>
    <string name="product_purchase_date_text_label">Purchase date : </string>
    <string name="product_expiry_date_text_label">Expiry date : </string>
    <string name="product_additional_note_text_label">Additional note : </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Register</string>
    <string name="or">or with Google</string>
    <string name="welcome_text">Welcome to</string>
    <string name="log_out">Sign out</string>
    <string name="action_help">Help</string>
    <string name="delete_product_text">Delete</string>
    <string name="edit_product_text">Edit</string>
</resources>
