<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.BarcodeRecognitionActivity">

    <TextView
        android:id="@+id/barcode_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/title"
        android:paddingTop="40dp"
        android:text="@string/barcode_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/barcode_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barcode_title"
        android:labelFor="@id/barcode_url"
        android:paddingTop="40dp"
        android:text="@string/barcode_url"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/barcode_contact_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barcode_url"
        android:labelFor="@id/barcode_contact_info"
        android:paddingTop="40dp"
        android:text="@string/barcode_contact_info"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/barcode_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barcode_contact_info"
        android:labelFor="@id/barcode_email"
        android:paddingTop="40dp"
        android:text="@string/barcode_email"
        android:textStyle="bold" />

    <Button
        android:id="@+id/snap_barcode_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/snap_barcode_btn_text" />

    <!--android:layout_toEndOf="@+id/snap_expire_date_btn_id"-->

</RelativeLayout>