<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    tools:context=".Activities.TextRecognitionActivity">

    <TextView
        android:id="@+id/edit_product_name_text_label_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_text_view_id"
        android:paddingTop="20dp"
        android:text="@string/edit_product_name_text_view_label"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_product_name_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_product_name_text_label_id"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_product_name_placeholder"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/edit_product_type_text_label_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_product_name_text_id"
        android:labelFor="@id/edit_text_view_id"
        android:paddingTop="20dp"
        android:text="@string/edit_product_type_text_view_label"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_product_type_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_product_type_text_label_id"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_product_type_placeholder"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/edit_text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_product_type_text_id"
        android:labelFor="@id/edit_text_view_id"
        android:paddingTop="20dp"
        android:text="@string/edit_text_view_label"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/date_picker_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_label"
        android:layout_marginEnd="-100dp"
        android:layout_toStartOf="@+id/edit_text_view_id"
        android:contentDescription="@string/date_picker_btn_text"
        android:onClick="showDatePickerDialog"
        android:src="@drawable/ic_round_date_range_24px" />

    <ImageButton
        android:id="@+id/snap_expire_date_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_label"
        android:layout_marginEnd="-50dp"
        android:layout_toStartOf="@+id/edit_text_view_id"
        android:contentDescription="@string/snap_expire_date_btn_text"
        android:src="@drawable/ic_round_photo_camera_24px" />

    <EditText
        android:id="@+id/edit_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_label"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:hint="@string/enter_expire_date_or_snapshot_it_placeholder"
        android:importantForAutofill="no"
        android:inputType="text" />

    <ImageView
        android:id="@+id/photo_image_id"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/snap_expire_date_btn_id"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:alpha=".50"
        android:contentDescription="@string/photo_image_text"
        android:maxWidth="300dp"
        android:maxHeight="300dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_groceries_placeholder"
        android:text="@string/photo_image_text" />

    <TextView
        android:id="@+id/expire_date_options_label_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photo_image_id"
        android:layout_marginTop="10dp"
        android:padding="10sp"
        android:text="@string/recognized_date_options_label"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/expire_date_options_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expire_date_options_label_id" />

    <Button
        android:id="@+id/save_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/save_btn" />

</RelativeLayout>