<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_product_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddProductActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/action_toolbar"
        android:layout_width="424dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageButton
        android:id="@+id/snap_product_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_toolbar"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:contentDescription="@string/snap_product_btn_text"
        android:src="@drawable/ic_round_photo_camera_24px" />

    <ImageView
        android:id="@+id/product_photo_image_id"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_below="@+id/action_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/photo_image_text"
        android:maxWidth="300dp"
        android:maxHeight="300dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_groceries_placeholder"
        android:text="@string/photo_image_text" />

    <TextView
        android:id="@+id/edit_product_name_text_label_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_photo_image_id"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:paddingTop="20dp"
        android:text="@string/edit_product_name_text_view_label"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_product_name_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_product_name_text_label_id"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_product_name_placeholder"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textStyle="italic" />

    <RelativeLayout
        android:id="@+id/edit_product_type_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_product_name_text_id"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp">

        <Spinner
            android:id="@+id/product_categories_options_id"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_product_category"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/purchase_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_product_type_text_id"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/purchase_date_text_view_label"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/from_date_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/purchase_date_label"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:focusable="false"
        android:hint="@string/enter_purchase_date_or_snapshot_it_placeholder"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/expiry_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from_date_id"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/expiry_date_text_view_label"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/to_date_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expiry_date_label"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:focusable="false"
        android:hint="@string/enter_expire_date_or_snapshot_it_placeholder"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textStyle="italic" />

    <ImageButton
        android:id="@+id/snap_expire_date_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from_date_id"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/to_date_id"
        android:layout_toRightOf="@+id/to_date_id"
        android:background="@null"
        android:contentDescription="@string/snap_expire_date_btn_text"
        android:src="@drawable/ic_round_photo_camera_24px" />

    <RelativeLayout
        android:id="@+id/expire_date_options_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to_date_id"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp">

        <Spinner
            android:id="@+id/expire_date_options_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/to_date_alternative_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recognized_date_options_label"
            android:textStyle="italic" />
    </RelativeLayout>

    <TextView
        android:id="@+id/edit_product_note_text_label_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expire_date_options_label_id"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/edit_product_note_text_view_label"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/product_note_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_product_note_text_label_id"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_product_note_placeholder"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textStyle="italic" />

    <!--<Button-->
    <!--android:id="@+id/cancel_btn_id"-->
    <!--android:layout_width="70dp"-->
    <!--android:layout_height="35dp"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_marginStart="10dp"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:layout_marginRight="10dp"-->
    <!--android:layout_marginBottom="10dp"-->
    <!--android:alpha=".85"-->
    <!--android:background="@drawable/button_background_with_radius_red"-->
    <!--android:text="@string/home_btn" />-->

    <!--<Button-->
    <!--android:id="@+id/save_btn_id"-->
    <!--android:layout_width="70dp"-->
    <!--android:layout_height="35dp"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_marginEnd="10dp"-->
    <!--android:layout_marginRight="10dp"-->
    <!--android:layout_marginBottom="10dp"-->
    <!--android:alpha=".85"-->
    <!--android:background="@drawable/button_background_with_radius_green"-->
    <!--android:text="@string/save_btn" />-->

</RelativeLayout>