<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="3dp"
    card_view:cardCornerRadius="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_photo_image_id"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/photo_image_text"
            android:paddingTop="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_groceries_placeholder"
            android:text="@string/photo_image_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@id/product_photo_image_id"
            android:layout_toRightOf="@id/product_photo_image_id"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_name_text_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name_text_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_name_text_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_category_text_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_category_text_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_category_text_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_purchase_date_text_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_purchase_date_text_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_purchase_date_text_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_expiry_date_text_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_expiry_date_text_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_expiry_date_text_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_additional_note_text_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/product_additional_note_text_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_additional_note_text_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_photo_image_id"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/product_photo_image_id"
            android:layout_toRightOf="@id/product_photo_image_id"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:background="@null"
                android:minWidth="60dp"
                android:minHeight="30dp"
                android:text="@string/edit_product_text"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/delete_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:background="@null"
                android:minWidth="60dp"
                android:minHeight="30dp"
                android:text="@string/delete_product_text"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>